# bus_antsirabe_api

./: Cargo.toml  Readme.md  travel.json
src/: app_state.rs  main.rs  travel_serializer.rs
test_api/: bus_a_empreinter.http  list_trajet.http
